@@ -1,10 +1,10 @@
 =begin
   inline.rb - Ruby/GdkPixbuf sample script.
 
-  Copyright (c) 2004 Ruby-GNOME2 Project Team
+  Copyright (c) 2004-2006 Ruby-GNOME2 Project Team
   This program is licenced under the same licence as Ruby-GNOME2.
 
-  $Id: inline.rb,v 1.1 2004/08/14 07:00:50 mutoh Exp $
+  $Id: inline.rb,v 1.2 2006/06/17 14:38:08 mutoh Exp $
 =end
 
 require 'gtk2'
@@ -28,7 +28,6 @@ pixbuf3 = Gdk::Pixbuf.new(data, false)
 # Create Gdk::Pixbuf from Gdk::Pixbuf.
 pixbuf4 = Gdk::Pixbuf.new(pixbuf, 10, 10, 20, 20)
 
-Gtk.init
 vbox = Gtk::VBox.new
 vbox.add(Gtk::Image.new(pixbuf))
 vbox.add(Gtk::Image.new(pixbuf2))
