@@ -1,10 +1,10 @@
 =begin
   pixdata.rb - Ruby/GdkPixbuf sample script.
 
-  Copyright (c) 2004 Ruby-GNOME2 Project Team
+  Copyright (c) 2004-2006 Ruby-GNOME2 Project Team
   This program is licenced under the same licence as Ruby-GNOME2.
 
-  $Id: pixdata.rb,v 1.1 2004/08/14 07:00:50 mutoh Exp $
+  $Id: pixdata.rb,v 1.2 2006/06/17 14:38:08 mutoh Exp $
 =end
 require 'gtk2'
 
@@ -35,6 +35,5 @@ pixdata = Gdk::Pixdata.deserialize(data)
 pixbuf2 = pixdata.to_pixbuf(false)
 
 dst = pixbuf2.scale(300, 300, Gdk::Pixbuf::INTERP_HYPER)
-Gtk.init
 Gtk::Window.new.add(Gtk::Image.new(dst)).show_all
 Gtk.main
