@@ -2,10 +2,10 @@
 =begin
   utils.rb - Ruby/GdkPixbuf sample script.
 
-  Copyright (c) 2002,2003 Ruby-GNOME2 Project Team
+  Copyright (c) 2002-2006 Ruby-GNOME2 Project Team
   This program is licenced under the same licence as Ruby-GNOME2.
 
-  $Id: utils.rb,v 1.3 2005/03/22 17:41:25 silicio Exp $
+  $Id: utils.rb,v 1.4 2006/06/17 14:38:08 mutoh Exp $
 =end
 
 require 'gtk2'
@@ -15,8 +15,6 @@ unless filename
   puts "ruby #{$0} filename"
   exit(1)
 end
-
-Gtk.init
 
 src =  Gdk::Pixbuf.new(filename)
 
