@@ -2,10 +2,10 @@
 =begin
   xpm.rb - Ruby/GdkPixbuf sample script.
 
-  Copyright (c) 2002,2003 Ruby-GNOME2 Project Team
+  Copyright (c) 2002-2006 Ruby-GNOME2 Project Team
   This program is licenced under the same licence as Ruby-GNOME2.
 
-  $Id: xpm.rb,v 1.4 2005/03/22 17:41:25 silicio Exp $
+  $Id: xpm.rb,v 1.5 2006/06/17 14:38:08 mutoh Exp $
 =end
 
 require 'gtk2'
@@ -25,8 +25,6 @@ r_xpm = [
       "+..++...++",
       "+..+++...+",
       "+..++++..+"]     
-
-Gtk.init
 
 w = Gtk::Window.new
 w.signal_connect('delete-event') do
